--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "csrf-csrf": "^2.2.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "vhost": "^3.0.2"
   },
@@ -31,17 +31,16 @@
     "@types/body-parser": "^1.19.2",
     "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
-    "@types/csurf": "^1.11.2",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^18.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.11.18",
     "@types/vhost": "^3.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
-    "nodemon": "^2.0.19",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.4"
   }
 }
